--- a/app/src/main/res/layout/tupian_child_item.xml
+++ b/app/src/main/res/layout/tupian_child_item.xml
@@ -3,7 +3,7 @@
     android:id="@+id/tupian_child_item_cardView"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="2dp"
     app:cardCornerRadius="4dp">
