--- a/app/src/main/res/layout/fragment_yinyue.xml
+++ b/app/src/main/res/layout/fragment_yinyue.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sidebar="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.YinYueFragment">
+    android:paddingBottom="16dp">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/yinyue_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="音乐" />
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+    <com.zwt.zwttransmit.fragment.SideBar
+        android:id="@+id/yinyue_sidebar"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/teal_200"
+        android:textSize="12sp"
+        sidebar:A="40"
+        sidebar:gapBetweenText="50"
+        sidebar:openCount="5"
+        sidebar:fontScale="1"/>
+
+</RelativeLayout>
