--- a/app/src/main/res/layout/yinyue_child_item.xml
+++ b/app/src/main/res/layout/yinyue_child_item.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_marginTop="5dp"
+            android:layout_marginStart="10dp"
             android:id="@+id/linearLayout">
 
             <TextView
