--- a/app/src/main/res/layout/fragment_yinyue.xml
+++ b/app/src/main/res/layout/fragment_yinyue.xml
@@ -16,11 +16,14 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentEnd="true"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
         android:textColor="@color/teal_200"
-        android:textSize="12sp"
+        android:textSize="14sp"
         sidebar:A="40"
         sidebar:gapBetweenText="50"
         sidebar:openCount="5"
-        sidebar:fontScale="1"/>
+        sidebar:fontScale="1"
+        tools:ignore="RtlSymmetry" />
 
 </RelativeLayout>
